# FireSpreadPredictor

./: .replit  app.py  forestfire.db  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
data/backup/: fire_data_backup_20250629_233416.csv  model_history_backup_20250629_233416.csv  prediction_history_backup_20250629_233422.csv
models/: forest_fire_models.pkl
pages/: 1_Data_Overview.py  2_Model_Training.py  3_Fire_Prediction.py  4_Fire_Simulation.py  5_Model_Performance.py  6_Database_Management.py
utils/: data_loader.py  database.py  models.py  preprocessing.py  simulation.py  visualization.py  weather_api.py
